--- a/developing.html
+++ b/developing.html
@@ -195,7 +195,7 @@
                         icon:{
                             path: google.maps.SymbolPath.BACKWARD_CLOSED_ARROW,
                             scale: 3,
-                            strokeColor: colourArray[i]
+                            strokeColor: colourArray[count%16]
                         }
                     }
                 });
