--- a/developing.html
+++ b/developing.html
@@ -165,6 +165,8 @@
         function directionResults(result, status) {
             if (status == google.maps.DirectionsStatus.OK) {
 
+                console.log(result)
+
                 var addresses = 0;
                 for(i=1; i<=4; i++) {
                     if (document.getElementById(`pac-input${i}`).value != "")
@@ -181,7 +183,7 @@
                 // Create a unique DirectionsRenderer 'i'
                 renderArray[j] = new google.maps.DirectionsRenderer();
                 renderArray[j].setMap(map);
-
+                
                 // Some unique options from the colorArray so we can see the routes
                 renderArray[j].setOptions({
                     preserveViewport: true,
@@ -196,7 +198,11 @@
                             path: google.maps.SymbolPath.BACKWARD_CLOSED_ARROW,
                             scale: 3,
                             strokeColor: colourArray[count%16]
-                        }
+                        },
+                        //label:{ 
+                            //text: result.routes[0].legs[j].duration.text
+
+                        //}
                     }
                 });
 
