--- a/developing.html
+++ b/developing.html
@@ -168,14 +168,20 @@
                 console.log(result)
 
                 var addresses = 0;
+                var timeTaken = 0;
                 for(i=1; i<=4; i++) {
-                    if (document.getElementById(`pac-input${i}`).value != "")
+                    if (document.getElementById(`pac-input${i}`).value != ""){
                         addresses ++;
+                    }
+                }
+                for(i=0; i<addresses-1; i++) {
+                    timeTaken += result.routes[0].legs[i].duration.value;
                 }
 
                 document.getElementById("routes").innerHTML += "<br>" + document.getElementById("pac-input1").value
                 for(i=2; i<=addresses; i++)
                     document.getElementById("routes").innerHTML += " &#8594 " + document.getElementById(`pac-input${i}`).value 
+                document.getElementById("routes").innerHTML += " (" + Math.floor(timeTaken/60/60) + "Hrs " + Math.floor((timeTaken%3600)/60) + "Mins) "; //+ Math.floor(timeTaken%60) + "Secs) ";
                 document.getElementById("routes").innerHTML += "<button id='routeNumber" + j + "' onclick='removeRoute(this.id)' style='float: right;'>X</button><br>";
 
                 var count = ((document.getElementById("routes").innerHTML.match(/<br>/g)||[]).length)/2-1;
@@ -183,7 +189,7 @@
                 // Create a unique DirectionsRenderer 'i'
                 renderArray[j] = new google.maps.DirectionsRenderer();
                 renderArray[j].setMap(map);
-                
+
                 // Some unique options from the colorArray so we can see the routes
                 renderArray[j].setOptions({
                     preserveViewport: true,
