Updating Clear button to Clear All Routes

--- a/developing.html
+++ b/developing.html
@@ -326,7 +326,7 @@
             <input id="pac-input4" size="30" class="controls" type="text" placeholder="Start typing here"><br>
         </a>
         <a><br><button onclick="readRequests()">Calculate</button>
-            <button onclick="removeAll()">Clear</button>
+            <button onclick="removeAll()">Clear All Routes</button>
             <br></a>
         <br>
         <a>Departure Time: <input type="time" id="departTime"><br><br></a>
