--- a/developing.html
+++ b/developing.html
@@ -48,13 +48,13 @@
                 </div>
               </div>
             </div>
-          </div>
-        <a><br><button onclick="readRequests()">Calculate</button>
-        <button onclick="removeAll()">Clear All Routes</button>
-        <br></a>
-        <br>
-        <a>Departure Time: <input type="time" id="departTime"><br><br></a>
-        <body>---------------------------------------------<br>Routes<p id="routes"></p>
+            <a><br><button onclick="readRequests()">Calculate</button>
+            <button onclick="removeAll()">Clear All Routes</button>
+            <br></a>
+            <br>
+            <a>Departure Time: <input type="time" id="departTime"><br><br></a>
+        </div>
+        <body>---------------------------------------------<br><p id="routes">Routes<br></p>
         </body>
     </div>
     <div id="map-canvas"></div>
