Proof of concept simulating route animation

--- a/developing.html
+++ b/developing.html
@@ -47,6 +47,7 @@
             <a>Departure Time: <input type="time" id="departTime"><br><br></a>
         </div>
         <body>---------------------------------------------<br><p id="routes">Routes<br></p>
+          <button onclick="test()">Testtest</button>
         </body>
     </div>
     <div id="map-canvas"></div>
