--- a/developing.html
+++ b/developing.html
@@ -22,6 +22,7 @@
         <div class="container">
             <div class="row">
               <div class="col-sm-9 col-xl-10 order-2 order-sm-1 mt-3">
+                <h>Multi-Route Simulator Tool</h>
                 <div id="sortablelist" class="list-group mb-4 mt-3" data-id="0">
                   <div class="list-group-item d-flex align-items-center justify-content-between" data-id="1">
                     <div>
@@ -45,8 +46,9 @@
             <br></a>
             <br>
             <a>Departure Time: <input type="time" id="departTime"><br><br></a>
+            <p style="text-align: center;"><b>Routes</b></p>
         </div>
-        <body>---------------------------------------------<br><p id="routes">Routes<br></p>
+        <body><p id="routes"></p>
         </body>
     </div>
     <div id="map-canvas"></div>
