--- a/developing.html
+++ b/developing.html
@@ -22,7 +22,7 @@
         <div class="container">
             <div class="row">
               <div class="col-sm-9 col-xl-10 order-2 order-sm-1 mt-3">
-                <h>Multi-Route Simulator Tool</h>
+                <pre id="title">Multi-Route Simulator    <input id="label" type="text" size="7" placeholder="Route Label"></input></pre> 
                 <div id="sortablelist" class="list-group mb-4 mt-3" data-id="0">
                   <div class="list-group-item d-flex align-items-center justify-content-between" data-id="1">
                     <div>
