--- a/developing.html
+++ b/developing.html
@@ -41,11 +41,11 @@
                 </div>
               </div>
             </div>
-            <a><br><button onclick="readRequests()">Calculate</button>
-            <button onclick="removeAll()">Clear All Routes</button>
-            <br></a>
-            <br>
-            <a>Departure Time: <input type="time" id="departTime"><b id="clock"></b><br><br></a>
+            <div>Departure Time: <input type="time" id="departTime"><b id="clock"></b><br><br></div>
+            <div class="centre"><br><button onclick="readRequests()">Calculate</button>
+            <!--<button onclick="removeAll()">Clear All Routes</button> -->
+            <br></div>
+            <br><br>
             <p style="text-align: center;"><b>Routes</b></p>
         </div>
         <body><p id="routes"></p>
