Added some dots to input text placeholder

--- a/developing.html
+++ b/developing.html
@@ -22,20 +22,20 @@
         <div class="container">
             <div class="row">
               <div class="col-sm-9 col-xl-10 order-2 order-sm-1 mt-3">
-                <pre id="title">Multi-Route Simulator    <input id="label" type="text" size="7" placeholder="Route Label"></input></pre> 
+                <pre id="title">Multi-Route Simulator    <input id="label" type="text" size="7" placeholder="Route label..."></input></pre> 
                 <div id="sortablelist" class="list-group mb-4 mt-3" data-id="0">
                   <div class="list-group-item d-flex align-items-center justify-content-between" data-id="1">
                     <div>
                       <p class="mb-0 d-inline-flex align-items-center">
                         Address<br>
-                        <input id="pac-input1" size="30" class="controls" type="text" onchange="addInputs()" placeholder="Start typing here to add destination"><br></p>
+                        <input id="pac-input1" size="30" class="controls" type="text" onchange="addInputs()" placeholder="Start typing here to add destination..."><br></p>
                     </div>
                   </div>
                   <div class="list-group-item d-flex align-items-center justify-content-between" data-id="2">
                     <div>
                       <p class="mb-0 d-inline-flex align-items-center">
                         Address<br>
-                        <input id="pac-input2" size="30" class="controls" type="text" onchange="addInputs()" placeholder="Start typing here to add destination"><br></p>
+                        <input id="pac-input2" size="30" class="controls" type="text" onchange="addInputs()" placeholder="Start typing here to add destination..."><br></p>
                     </div>
                   </div>
                 </div>
