--- a/Logistics Estimation Tool.html
+++ b/Logistics Estimation Tool.html
@@ -33,7 +33,7 @@
               </div>
             </div>
             <div>Departure Time: <input type="time" id="departTime"><b id="clock"></b><br><br></div>
-            <div class="centre"><br><button title="Search Route" onclick="readRequests()">Calculate</button>
+            <div class="centre"><br><button title="Search Route" id="Calculate" onclick="readRequests()">Calculate</button>
             <!--<button onclick="removeAll()">Clear All Routes</button> -->
             <br></div>
             <br><br>
